retrieved/unpackaged/objects/Consumable__c.object
<CustomObject>
    <fields>
        <fullName>Consumable_Image__c</fullName>
        <formula>Image( Picture__c , Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumable Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effect__c</fullName>
        <label>Effect</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Consumable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consumable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>